# webgpu-project

./: CMakeLists.txt  README.md  line_counter.py  notes.md  run.md
scripts/: main.lua
src/: Application.cpp  Application.hpp  InputManager.cpp  InputManager.hpp  LuaManager.cpp  LuaManager.hpp  main.cpp
src/gfx/: Adapter.cpp  Adapter.hpp  Bear.cpp  Bear.hpp  Device.cpp  Device.hpp  Window.cpp  Window.hpp
webgpu/: README.md  webgpu.cmake
